--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class=imageContainer">
+		<img src="https://placebear.com/400/250">
+	</div>
+	<div>
+		<table>
+			<tr>
+				<td id="tc1"><img src="https://picsum.photos/200"></td>
+				<td id="tc2">
+					<p> 
+						Unit #5-Follr Plans
+						<ol type="A">
+							<li>Kitchen</li>
+							<li>Bathroom</li>
+							<li>Using "Slabs"</li>
+							<li>Georgian Home</li>
+							<li>Sketching Assignment #5</li>
+						</ol>
+					</p>
+				</td>
+				<td id="tc3">
+					<img src="https://picsum.photos/200"
+				</td>
+			</tr>
+			<tr>
+				<td id="tc1"><img src="https://placebear.com/200/200"></td>
+				<td id="tc2"><p>Discuss factors that are important in the design of benrooms. Plan the size and location of closets for a typical residence.			</p></td>
+				<td id="tc3"><img src="https://fastly.picsum.photos/id/143/200/200.jpg?hmac=zGj8dhmmqaaQZDcHhU9C0itdL12zcGTpuVdQiVrYiEQ"></td>
+			</tr>
+		</table>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
