--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class=imageContainer">
+	<div class="imageContainer">
 		<img src="https://placebear.com/400/250">
 	</div>
 	<div>
